--- a/trunk/application/views/simple2/login.twig
+++ b/trunk/application/views/simple2/login.twig
@@ -22,14 +22,12 @@
 <td colspan="2" class="ui-widget-header" align="center">::{{LANG_LOGIN}}::</td>
 </tr><tr>
 <td class="ui-widget-content" width="50%">{{LANG_USERNAME}}<br />[{{URL_TAG("login/register", LANG_REGISTER)|raw}}]</td>
-<td class="ui-widget-content" width="50%"><input type="text" name="username" class="text" size="30" tabindex="1" id="usr" onblur="validateAlphaNumeric('usr', 'usrerr');" />
-<div id="usrerr"></div>
+<td class="ui-widget-content" width="50%"><input type="text" name="username" class="text" size="30" tabindex="1" id="usr" />
 {{VALIDATION_USERNAME|raw}}
 </td>
 </tr><tr>
 <td class="ui-widget-content" width="50%">{{LANG_PASSWORD}}<br />[{{URL_TAG("login/PasswordRecovery", LANG_FORGOT)|raw}}]</td>
-<td class="ui-widget-content" width="50%"><input type="password" name="password" class="text" size="30" tabindex="2" id="pwd" onblur="validateAlphaNumeric('pwd', 'pwderr');" />
-<div id="pwderr"></div>
+<td class="ui-widget-content" width="50%"><input type="password" name="password" class="text" size="30" tabindex="2" id="pwd" />
 {{VALIDATION_PASSWORD|raw}}
 </td>
 </tr><tr>
