--- a/trunk/application/views/simple2/lostpassword.twig
+++ b/trunk/application/views/simple2/lostpassword.twig
@@ -13,15 +13,13 @@
 </tr><tr>
 <td class="ui-widget-content" width="50%">{{LANG_USERNAME}}<br>[{{URL_TAG("login/register", LANG_REGISTER)|raw}}]</td>
 <td class="ui-widget-content" width="50%">
-	<input type="text" name="lost_user" class="text" size="30" id="usr" onblur="validateAlphaNumeric('usr', 'usrerr');" />
-	<div id="usrerr"></div>
+	<input type="text" name="lost_user" class="text" size="30" id="usr" />
 	{{VALIDATION_USERNAME|raw}}
 </td>
 </tr><tr>
 <td class="ui-widget-content" width="50%">{{LANG_EMAIL}}</td>
 <td class="ui-widget-content" width="50%">
-	<input type="text" name="lost_email" class="text" size="30" id="email" onblur="validateEmail('email', 'emailerr');" />
-	<div id="emailerr"></div>
+	<input type="text" name="lost_email" class="text" size="30" id="email" />
 	{{VALIDATION_EMAIL|raw}}</td>
 </tr><tr>
 <td colspan="2" class="ui-widget-header" align="center"><input type="submit" value="{{LANG_GETPASS}}" class="submit" /></td>
