--- a/trunk/application/views/simple2/master.twig
+++ b/trunk/application/views/simple2/master.twig
@@ -1,7 +1,5 @@
-<!DOCTYPE html
-PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <title>{% block title %}{% endblock %}</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -17,6 +15,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 <!--RSS & ICO -->
 {{LinkTag("application/views/simple2/images/favicon.ico", "shortcut icon", "image/ico")|raw}}
 {{LinkTag("boards/latestPost", "alternate", "application/rss+xml", pageTitle)|raw}}
+{{LinkTag("search/results", "search", "application/opensearchdescription+xml", boardName)|raw}}
 
 <!-- Language JS File. -->
 <script type="text/javascript" src="{{APP_URL}}language/{{LANG}}/{{LANG}}.lang.js"></script>
@@ -49,10 +48,10 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 	</div>
 </noscript>
 
-<!-- Used for our notification system -->
+{# Used for our notification system #}
 {% if NOTIFY_MSG != "" %}
 <script type="text/javascript">
-FormResults("{{NOTIFY_TYPE}}", "{{NOTIFY_MSG}}"); //display message.
+	FormResults("{{NOTIFY_TYPE}}", "{{NOTIFY_MSG}}"); //display message.
 </script>
 {% endif %}
 
@@ -99,7 +98,7 @@ FormResults("{{NOTIFY_TYPE}}", "{{NOTIFY_MSG}}"); //display message.
 	</div>
 	<!-- END searchBar -->
 
-{%- elseif groupAccess == 2 -%}
+{%- elseif groupAccess == 2 or groupAccess == 3 -%}
 
 	<!-- START searchBar -->
 	<div id="qSearch" style="display:none" title="{{LANG_QUICKSEARCH}}">
@@ -181,23 +180,17 @@ FormResults("{{NOTIFY_TYPE}}", "{{NOTIFY_MSG}}"); //display message.
 
 {# setup menu by group policy. #}
 {% if groupAccess == 1 %}
-
 	<td class="ui-widget-content">{{LANG_WELCOME}} <b>{{LOGGEDUSER}}</b> [{{URL_TAG("login/LogOut/", LANG_LOGOUT)|raw}}]<br /><a href="Profile.php#/PM/Inbox">{{NEWPM}}</a><br /><a href="acp/index.php">{{LANG_CP}}</a><br /><a href="Search.php?action=newposts">{{LANG_NEWPOSTS}}</a></td>
 	</tr><tr>
-		<td class="ui-widget-content" align="center"><a href="{{ADDRESS}}">{{LANG_HOME}}</a> - <a href="#" onclick="$('#qSearch').dialog('open');">{{LANG_SEARCH}}</a> - <a href="#" onclick="$('#help').dialog('open');">{{LANG_HELP}}</a> - <a href="Members.php">{{LANG_MEMBERLIST}}</a> - <a href="Profile.php">{{LANG_PROFILE}}</a></td>
+		<td class="ui-widget-content" align="center">{{URL_TAG("/", LANG_HOME)|raw}} - <a href="#" onclick="$('#qSearch').dialog('open');">{{LANG_SEARCH}}</a> - <a href="#" onclick="$('#help').dialog('open');">{{LANG_HELP}}</a> - {{URL_TAG("users/memberslist/", LANG_MEMBERLIST)|raw}} - {{URL_TAG("users/", LANG_PROFILE)|raw}}</td>
 	</tr><tr>
-
-{%- elseif groupAccess == 2 -%}
-
+{%- elseif groupAccess == 2 or groupAccess == 3 -%}
 	<td class="ui-widget-content">{{LANG_WELCOME}} <b>{{LOGGEDUSER}}</b> [{{URL_TAG("login/LogOut/", LANG_LOGOUT)|raw}}]<br /><a href="Profile.php#/PM/Inbox">{{NEWPM}}</a><br /><a href="Search.php?action=newposts">{{LANG_NEWPOSTS}}</a></td>
 	</tr><tr>
-		<td class="ui-widget-content" align="center"><a href="{{ADDRESS}}">{{LANG_HOME}}</a> - <a href="#" onclick="$('#qSearch').dialog('open');">{{LANG_SEARCH}}</a> - <a href="#" onclick="$('#help').dialog('open');">{{LANG_HELP}}</a> - <a href="Members.php">{{LANG_MEMBERLIST}}</a> - <a href="Profile.php">{{LANG_PROFILE}}</a></td>
+		<td class="ui-widget-content" align="center">{{URL_TAG("/", LANG_HOME)|raw}} - <a href="#" onclick="$('#qSearch').dialog('open');">{{LANG_SEARCH}}</a> - <a href="#" onclick="$('#help').dialog('open');">{{LANG_HELP}}</a> - {{URL_TAG("users/memberslist/", LANG_MEMBERLIST)|raw}} - {{URL_TAG("users/", LANG_PROFILE)|raw}}</td>
 	</tr><tr>
-
 {%- else -%}
 	<td class="ui-widget-content">{{LANG_WELCOMEGUEST}}! <a href="#" onclick="$('#login').dialog('open');">{{LANG_LOGIN}}</a> | {{URL_TAG("login/register/", LANG_REGISTER)|raw}}</td>
-	</tr><tr>
-		<td class="ui-widget-content" align="center"><a href="{{ADDRESS}}">{{LANG_HOME}}</a> - <a href="#" onclick="$('#help').dialog('open');">{{LANG_HELP}}</a></td>
 	</tr><tr>
 {%- endif -%}
 
