--- a/trunk/application/views/simple2/register.twig
+++ b/trunk/application/views/simple2/register.twig
@@ -44,77 +44,80 @@ $(document).ready(function(){
 		</div>
 	</div>
 </div>
-
 {{REGISTERFORM|raw}}
 <table border="0" class="table" cellspacing="1" cellpadding="1">
 <tr>
-<td colspan="2" class="ui-widget-header" align="center">{{LANG_REGISTER}}</td>
+	<td colspan="2" class="ui-widget-header" align="center">{{LANG_REGISTER}}</td>
 </tr><tr>
-<td class="ui-widget-content" width="50%">{{LANG_EMAIL}}</td>
-<td class="ui-widget-content" width="50%"><input name="email" type="text" size="30" maxlength="255" class="text" id="email" /></td>
+	<td class="ui-widget-content" width="50%">{{LANG_EMAIL}}</td>
+	<td class="ui-widget-content" width="50%"><input name="email" type="text" size="30" maxlength="255" class="text" id="email" />{{VALIDATION_EMAIL|raw}}</td>
 </tr><tr>
-<td class="ui-widget-content" width="50%">{{LANG_USERNAME}}<a href="#" class="hint">[?]<span>{{LANG_RULE}}</span></a></td>
-<td class="ui-widget-content" width="50%"><input name="username" type="text" size="30" maxlength="25" class="text" id="username" /></td>
+	<td class="ui-widget-content" width="50%">{{LANG_USERNAME}}<a href="#" class="hint">[?]<span>{{LANG_RULE}}</span></a></td>
+	<td class="ui-widget-content" width="50%"><input name="username" type="text" size="30" maxlength="25" class="text" id="username" />{{VALIDATION_USERNAME|raw}}</td>
 </tr><tr>
-<td class="ui-widget-content" width="50%">{{LANG_PASSWORD}}</td>
-<td class="ui-widget-content" width="50%"><input name="password" type="password" size="30" class="text" id="password" />
-<div class="PwdStrengthBox"><span class="password-strength"></span> <span class="strength-text">Type Password</span></div>
-</td>
+	<td class="ui-widget-content" width="50%">{{LANG_PASSWORD}}</td>
+	<td class="ui-widget-content" width="50%">
+		<input name="password" type="password" size="30" class="text" id="password" />
+		<div class="PwdStrengthBox"><span class="password-strength"></span> <span class="strength-text">Type Password</span></div>
+		{{VALIDATION_PASSWORD|raw}}
+	</td>
 </tr><tr>
-<td class="ui-widget-content" width="50%">{{LANG_CONFIRMPWD}}</td>
-<td class="ui-widget-content" width="50%"><input name="password_confirm" type="password" size="30" class="text" id="password_confirm" /></td>
+	<td class="ui-widget-content" width="50%">{{LANG_CONFIRMPWD}}</td>
+	<td class="ui-widget-content" width="50%"><input name="password_confirm" type="password" size="30" class="text" id="password_confirm" />{{VALIDATION_VPASSWORD|raw}}</td>
 </tr><tr>
-<td class="ui-widget-content" width="50%">{{LANG_TIME}}</td>
-<td class="ui-widget-content" width="50%">{TIME}</td>
+	<td class="ui-widget-content" width="50%">{{LANG_TIME}}</td>
+	<td class="ui-widget-content" width="50%">{{TimeZone|raw}} {{VALIDATION_TIMEZONE|raw}}</td>
 </tr><tr>
-<td class="ui-widget-content" width="50%">{{LANG_TIMEFORMAT}}<a href="#" class="hint">[?]<span>{{LANG_TIMEINFO}}</span></a></td>
-<td class="ui-widget-content" width="50%"><input type="text" name="time_format" value="{{TIMEFORMAT}}" size="30" maxlength="14" class="text" id="time_format" /></td>
+	<td class="ui-widget-content" width="50%">{{LANG_TIMEFORMAT}}<a href="#" class="hint">[?]<span>{{LANG_TIMEINFO}}</span></a></td>
+	<td class="ui-widget-content" width="50%"><input type="text" name="time_format" value="{{TIMEFORMAT}}" size="30" maxlength="14" class="text" id="time_format" />{{VALIDATION_TIMEFORMAT|raw}}</td>
 </tr><tr>
-<td class="ui-widget-content" width="50%">{{LANG_PMNOTIFY}}</td>
-<td class="ui-widget-content" width="50%"><input type="radio" name="pm_notice" value="1" />{{LANG_YES}} <input type="radio" name="pm_notice" value="0" />{{LANG_NO}}</td>
+	<td class="ui-widget-content" width="50%">{{LANG_PMNOTIFY}}</td>
+	<td class="ui-widget-content" width="50%"><input type="radio" name="pm_notice" value="1" checked=checked />{{LANG_YES}} <input type="radio" name="pm_notice" value="0" />{{LANG_NO}}</td>
 </tr><tr>
-<td class="ui-widget-content" width="50%">{{LANG_SHOWEMAIL}}</td>
-<td class="ui-widget-content" width="50%"><input type="radio" name="show_email" value="0" />{{LANG_YES}} <input type="radio" name="show_email" value="1" />{{LANG_NO}}</td>
+	<td class="ui-widget-content" width="50%">{{LANG_SHOWEMAIL}}</td>
+	<td class="ui-widget-content" width="50%"><input type="radio" name="show_email" value="0" />{{LANG_YES}} <input type="radio" name="show_email" value="1" checked=checked />{{LANG_NO}}</td>
 </tr><tr>
-<td class="ui-widget-content" width="50%">{{LANG_STYLE}}</td>
-<td class="ui-widget-content" width="50%">{{STYLE|raw}}</td>
+	<td class="ui-widget-content" width="50%">{{LANG_STYLE}}</td>
+	<td class="ui-widget-content" width="50%">{{STYLE|raw}} {{VALIDATION_STYLE|raw}}</td>
 </tr><tr>
-<td class="ui-widget-content" width="50%">{{LANG_LANGUAGE}}</td>
-<td class="ui-widget-content" width="50%">{{LANGUAGE|raw}}</td>
+	<td class="ui-widget-content" width="50%">{{LANG_LANGUAGE}}</td>
+	<td class="ui-widget-content" width="50%">{{LANGUAGE|raw}} {{VALIDATION_LANGUAGE|raw}}</td>
 </tr>
-<!-- START captcha -->
+{%if PREF_CAPTCHA == 1%}
 <tr>
-<td class="ui-widget-content" width="50%">{{LANG_CAPTCHA}}<a href="#" class="hint">[?]<span>{{LANG_CAPTCHAHELP}}</span></a></td>
-<td class="ui-widget-content" width="50%">
-	<input type="text" name="captcha" size="10" class="text" id="captcha" />&nbsp;<strong>{{CAPTCHA}}</strong>
-<div id="captchaerr"></div></td>
+	<td class="ui-widget-content" width="50%">{{LANG_CAPTCHA}}<a href="#" class="hint">[?]<span>{{LANG_CAPTCHAHELP}}</span></a></td>
+	<td class="ui-widget-content" width="50%">
+		<input type="text" name="captcha" size="10" class="text" id="captcha" />&nbsp;<strong>{{CAPTCHA}}</strong>
+		{{VALIDATION_CAPTCHA|raw}}
+	</td>
 </tr>
-<!-- END captcha -->
+{%endif%}
 
 {%if PREF_RULES == 1%}
 <tr>
-<td colspan="2" class="ui-widget-content" align="center">
-<textarea name="tos_msg" rows="5" cols="40" class="text" readonly=readonly>{{RULES}}</textarea><br />
-<input name="iagree" type="checkbox" value="yes" /><b>{{LANG_AGREE}}</b></td>
+	<td colspan="2" class="ui-widget-content" align="center">
+		<textarea name="tos_msg" rows="5" cols="40" class="text" readonly=readonly>{{RULES}}</textarea><br />
+		<input name="tos_terms" id="tos_terms" type="checkbox" value="yes" /><b>{{LANG_AGREE}}</b>
+	</td>
 </tr>
 {%endif%}
 <tr>
-<td colspan="2" class="ui-widget-content" align="center"><input name="coppavalid" type="checkbox" value="yes" />
-	{%if COPPA == 13%}
+<td colspan="2" class="ui-widget-content" align="center">
+	<input name="coppavalid" id="coppavalid" type="checkbox" value="yes" />
+	{%if PREF_COPPA == 13%}
 		<strong>{{COPPA_13}}</strong>
-	{%elseif COPPA == 16%}
+	{%elseif PREF_COPPA == 16%}
 		<strong>{{COPPA_16}}</strong>
-	{%elseif COPPA == 18%}
+	{%elseif PREF_COPPA == 18%}
 		<strong>{{COPPA_18}}</strong>
-	{%elseif COPPA == 21%}
+	{%elseif PREF_COPPA == 21%}
 		<strong>{{COPPA_21}}</strong>
 	{%else%}
 		{# Show nothing #}
 	{%endif%}
 </td>
-</tr>
-<tr>
-<td colspan="2" class="ui-widget-header" align="center"><input type="submit" VALUE="{{LANG_REGISTER}}" class="submit" /></td>
+</tr><tr>
+	<td colspan="2" class="ui-widget-header" align="center"><input type="submit" VALUE="{{LANG_REGISTER}}" class="submit" /></td>
 </tr>
 </table>
 </form>
@@ -123,7 +126,7 @@ $(document).ready(function(){
 new FormValidator('frmRegister', [{
     name: 'username',
     display: '{{LANG_USERNAME}}',
-    rules: 'alpha_numeric'
+    rules: 'required|alpha_numeric'
 }, {
     name: 'password',
 	display: '{{LANG_PASSWORD}}',
@@ -135,15 +138,33 @@ new FormValidator('frmRegister', [{
 }, {
     name: 'email',
 	display: '{{LANG_EMAIL}}',
-    rules: 'valid_email'
-}, {
-    name: 'time_format',
-    display: '{{LANG_TIMEFORMAT}}',
+    rules: 'required|valid_email'
+},
+{% if PREF_RULES == 1 %}
+{
+    name: 'tos_terms',
+    display: '{{LANG_AGREE}}',
     rules: 'required'
-}, {
+},
+{% endif %}
+{% if PREF_COPPA == 13 or PREF_COPPA == 16 or PREF_COPPA == 18 or PREF_COPPA == 21 %}
+{
+    name: 'coppavalid',
+    display: '{{LANG_COPPA}}',
+    rules: 'required'
+},
+{% endif %}
+{%if PREF_CAPTCHA == 1%}
+{
     name: 'captcha',
     display: '{{LANG_CAPTCHA}}',
     rules: 'required|numeric'
+},
+{% endif %}
+{
+    name: 'time_format',
+    display: '{{LANG_TIMEFORMAT}}',
+    rules: 'required'
 }], function(errors, event) {
 
     if (errors.length > 0) {
