--- a/trunk/application/views/simple2/viewtopic.twig
+++ b/trunk/application/views/simple2/viewtopic.twig
@@ -72,7 +72,7 @@
 	{% endif%}
 
 	{% if GAC_DELETEACL == TRUE %}
-		<a href="#" onclick="confirmDlg('{LANG_DELPROMPT}', '{BOARDDIR}/manage.php?mode=delete&amp;bid={BID}&amp;tid={TID}');return false;"><img src="template/simple2/images/deletetopic.gif" alt="" border="0" /></a>
+		<a href="#" onclick="confirmDlg('{{LANG_DELPROMPT}}', '{{BOARD_URL}}index.php/maintenance/delete/{{TOPICID}}');return false;">{{IMG("application/views/simple2/images/deletetopic.gif")|raw}}</a>
 	{% endif%}
 
 	{# see if user can toggle lock. #}
@@ -110,7 +110,7 @@
 		{% endif%}
 
 		{% if GAC_DELETETOPIC == TRUE %}
-			<a href="#" onclick="confirmDlg('{LANG-DELPROMPT}', '{BOARDDIR}/delete.php?action=deleteTopic&bid={BID}&tid={TID}');return false;"><img src="template/simple2/images/delete.gif" border="0" alt="" /></a>
+			<a href="#" onclick="confirmDlg('{{LANG_DELPROMPT}}', '{{BOARD_URL}}index.php/boards/deletetopic/{{TOPICID}}');return false;">{{IMG("application/views/simple2/images/delete.gif")|raw}}</a>
 		{% endif%}
 
 	{% endif%}
@@ -121,14 +121,13 @@
 	{% endif %}
 
 	{% if LOGGEDUSER == TOPIC_AUTHOR and GAC_DELETETOPIC == TRUE %}
-		<a href="#" onclick="confirmDlg('{LANG-DELPROMPT}', '{BOARDDIR}/delete.php?action=deleteTopic&bid={BID}&tid={TID}');return false;"><img src="template/simple2/images/delete.gif" border="0" alt="" /></a>
+		<a href="#" onclick="confirmDlg('{{LANG_DELPROMPT}}', '{{BOARD_URL}}index.php/boards/deletetopic/{{TOPICID}}');return false;">{{IMG("application/views/simple2/images/delete.gif")|raw}}</a>
 	{% endif %}
 
 {% endif%}
 
 {% if LOGGEDUSER != "guest" %}
 {{URL_TAG("boards/reply/"~TOPICID, IMG("application/views/simple2/images/quote.gif"))|raw}}
-<!--<a href="Post.php?mode=Reply&amp;bid={BID}&amp;tid={TID}&amp;type=1&amp;quser={AUTHOR}"><img src="template/simple2/images/quote.gif" border="0" alt="" /></a>-->
 {% endif%}
 
 </span></td>
@@ -241,7 +240,7 @@ _________________<br />
 		{% endif%}
 
 		{% if GAC_DELETETOPIC == TRUE %}
-			<a href="#" onclick="confirmDlg('{LANG-DELPROMPT}', '{BOARDDIR}/delete.php?action=deletePost&bid={BID}&tid={TID}&pid={POSTID}');return false;"><img src="template/simple2/images/delete.gif" border="0" alt="" /></a>
+			<a href="#" onclick="confirmDlg('{{LANG_DELPROMPT2}}', '{{BOARD_URL}}index.php/boards/deletepost/{{r.pid}}');return false;">{{IMG("application/views/simple2/images/delete.gif")|raw}}</a>
 		{% endif%}
 
 	{% endif%}
@@ -252,14 +251,13 @@ _________________<br />
 	{% endif %}
 
 	{% if LOGGEDUSER == r.author and GAC_DELETETOPIC == TRUE %}
-		<a href="#" onclick="confirmDlg('{LANG-DELPROMPT}', '{BOARDDIR}/delete.php?action=deletePost&bid={BID}&tid={TID}&pid={POSTID}');return false;"><img src="template/simple2/images/delete.gif" border="0" alt="" /></a>
+		<a href="#" onclick="confirmDlg('{{LANG_DELPROMPT2}}', '{{BOARD_URL}}index.php/boards/deletepost/{{r.pid}}');return false;">{{IMG("application/views/simple2/images/delete.gif")|raw}}</a>
 	{% endif %}
 
 {% endif%}
 
 {% if LOGGEDUSER != "guest" %}
 {{URL_TAG("boards/reply/"~TOPICID, IMG("application/views/simple2/images/quote.gif"))|raw}}
-<!--<a href="Post.php?mode=Reply&amp;bid={BID}&amp;tid={TID}&amp;pid={POSTID}&amp;type=2&amp;quser={AUTHOR}"><img src="template/simple2/images/quote.gif" border="0" alt="" /></a>-->
 {% endif%}
 </span></td>
 </tr><tr>
